--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Mobile.KMT.MainPage">
+             xmlns:viewmodel="clr-namespace:Mobile.KMT.ViewModels"
+             x:Class="Mobile.KMT.MainPage"
+             x:DataType="viewmodel:MainPageViewModel">
 
     <ScrollView>
         <VerticalStackLayout
@@ -9,7 +11,7 @@
             Padding="30,0"
             VerticalOptions="Center">
 
-            
+            <Label Text="{Binding Title, Mode=TwoWay}"/>
         </VerticalStackLayout>
     </ScrollView>
 
