Populated Login page, created navigation from main to login page, created alerts static functions

--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodel="clr-namespace:Mobile.KMT.ViewModels"
              x:Class="Mobile.KMT.Views.MainPage"
-             x:DataType="viewmodel:MainPageViewModel">
+             x:DataType="viewmodel:MainPageViewModel"
+             Title="{Binding Title}"
+             Loaded="ContentPage_Loaded">
 
     <ScrollView>
         <VerticalStackLayout
